<resources>
    <string name="app_name">CycleAlarm</string>
    <string name="setting_menu_item">Настройки</string>
    <string name="help_menu_item">Помощь</string>
    <string name="about_program_menu_item">О программе</string>
    <string name="temp_res_string">даты и дни ближайших сработок</string>
    <string name="temp_res_for_calendar_fragment">Тут отображается колендарь с отметками будильников и циклом(дни закрашены в разные цвета)</string>
    <string name="temp_res2_for_calendar_fragment">При нажатии на день тут отображаются события на этот день(будильник, напоминалка)</string>
    <string name="calendar">Календарь</string>
    <string name="alarms">Будильники</string>
    <string name="alarm">Будильник</string>
    <string name="navigation_drawer_open">Bar open</string>
    <string name="navigation_drawer_close">Bar_close</string>
    <string name="my_graphics">Мои графики</string>
    <string name="melody_of_alarms_signal">Мелодия сигнала</string>
    <string name="save_alarm">Сохранить</string>
    <string name="sleep_five_minutes">Дремать 5 минут</string>
    <string name="temperature">Температура:</string>
    <string name="wind">Ветер:</string>
    <string name="humidity">Влажность:</string>
    <string name="cloud">Облачность:</string>
    <string name="power">Давление:</string>
    <string name="ok_text">Ок</string>
    <string name="cancel_text">Отмена</string>
    <string name="open_weather_map_app_id">e8e2cd56b5ff9dc03867cb204da1f6d9</string>
    <string name="place_not_found">Такой город не найден</string>
    <string name="rain_volume">Осадки</string>
    <string name="notification_of_alarm">Напоминание</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="period_of_recycler">Период повтора</string>
    <string name="setting_type_of_day">Настройка дня</string>
    <string name="enter_text">Введите текст</string>
    <string name="name">Имя:</string>
    <string name="color">Цвет:</string>
    <string name="appwidget_text">CALENDAR</string>
    <string name="add_widget">Add widget</string>
    <string name="interval">Интервал</string>
    <string name="five_minute">5 минуты</string>
    <string name="ten_minute">10 минут</string>
    <string name="fifteen">15 минут</string>
    <string name="thirty_minute">30 минут</string>
    <string name="repeat">Повторять</string>
    <string name="tree_time">3 раза</string>
    <string name="fifth_time">5 раз</string>
    <string name="newer">Никогда</string>
    <string name="on">Выключено</string>
    <string name="time_of_activation">Время пробуждения</string>
    <string name="three_minutes_before">за 3 минуты</string>
    <string name="five_minutes_before">за 5 минут</string>
    <string name="ten_minutes_before">за 10 минут</string>
    <string name="smooth_wake_up">Плавное пробуждение</string>
    <string name="monday_short">Пн</string>
    <string name="tuesday_short">Вт</string>
    <string name="wednesday_short">Ср</string>
    <string name="thursday_short">Чт</string>
    <string name="friday_short">Пт</string>
    <string name="saturday_short">Сб</string>
    <string name="sunday_short">Вс</string>
    <string name="pause">Пауза</string>
    <array name="vibrator_names">
        <item>"Basic call"</item>
        <item>"Tick tock"</item>
        <item>"Tick tock short"</item>
        <item>"Tap Tap Tap"</item>
        <item>"Zig Zig Zig"</item>
        <item>"Shoot"</item>
    </array>

</resources>
