<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/to_calendar_fragment"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/calendar" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_graphics"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/my_graphics" />
        <item
            android:id="@+id/new_day_type_fragment"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/setting_type_of_day" />
    </group>
    <item
        android:id="@+id/to_alarms_fragment"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/alarms" />


</menu>