<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pause_text_view_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_alignParentStart="true"
        android:text="@string/on" />

    <Switch
        android:id="@+id/switch_pause_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="8dp" />

    <LinearLayout
        android:id="@+id/line_pause_dialog"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/switch_pause_dialog"
        android:layout_margin="4dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_pause_dialog">

        <LinearLayout
            android:id="@+id/data_pause_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/interval_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/interval" />

            <RadioGroup
                android:id="@+id/radiobtn_group_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp">

                <RadioButton
                    android:id="@+id/five_min_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/five_minute" />

                <RadioButton
                    android:id="@+id/ten_min_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_minute" />

                <RadioButton
                    android:id="@+id/fifteen_min_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifteen" />

                <RadioButton
                    android:id="@+id/thirty_min_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thirty_minute" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/line_pause_dialog1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="4dp"
                android:background="@color/colorAccent"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/repeat_after_pause_text_view_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/repeat" />

            <RadioGroup
                android:id="@+id/radiobtn_group_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp">

                <RadioButton
                    android:id="@+id/three_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tree_time" />

                <RadioButton
                    android:id="@+id/fifth_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifth_time" />

                <RadioButton
                    android:id="@+id/newer_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newer" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>